# splitting_models

./: README.md  requirements.txt  setup.cfg
assets/: benchmark_models.py
splitting_models/: base.py  dirint_coeffs.py  models.py  yang5_regimes.py
splitting_models/tests/: __init__.py  bsrn_five_sites.py
