[metadata]
name = splitting_models
version = 0.1.0
description = Global solar irradiance component-separation models
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
url = https://github.com/jararias/splitting_models
long_description = file: README.md
long_description_content_type = text/x-markdown
license = GPL v3.0
classifiers = 
    Natural Language :: English
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages_dir = splitting_models
packages = find_namespace:
